create cusom command to generate jscss file
